# KitchenSage

./: .gitignore  CLAUDE.md  README.md  SERVICES.md  add_samples.py  architecture_overview.md  env_example.txt  kitchen_crew.db-journal  logs.sh  main.py  package-lock.json  pyproject.toml  requirements.txt  start.sh  status.sh  stop.sh
.cursor/rules/: main.mdc
backend/: main.py  pyproject.toml  requirements.txt  run_api.py  test_complete_flow.py  test_meal_plan_fix.py
backend/scripts/: add_updated_at_column.py  import_paprika.py  init_db.py  migrate_dateless_meal_plans.py  migrate_schema.py
backend/src/: __init__.py  crew.py
backend/tests/: __init__.py  test_api.py  test_pending_recipe_repository.py  test_pending_recipe_service.py  test_pending_recipes_api.py
docs/: AGENT_TOOL_ALIGNMENT.md  CLI_IMPLEMENTATION.md  MVP_TODO.md  ORCHESTRATOR_DESIGN.md  PHOENIX_TELEMETRY.md  RECIPE_SEARCH_DISTINCTION.md  WEB_TOOLS_OPENAI_INTEGRATION.md  paprika-import.md
frontend/: .cursorrules  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: discover-page.spec.ts  grocery-list.spec.ts  home-page.spec.ts  meal-planning.spec.ts  server-health.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/test-results/: .last-run.json
scripts/: init_db.py
src/: cli.py  cli_orchestrated.py  crew.py
src/agents/: __init__.py  grocery_list.py  meal_planner.py  orchestrator.py  recipe_manager.py  recipe_scout.py
src/database/: __init__.py  (+2 more)
tests/: test_telemetry.py
(+76 files in other folders)
